--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,27 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="mainContent">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>
+        Menu
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content id="side-menu21">
+    <ion-list id="menu-list1">
+      <ion-item color="none" menuClose="" on-click="goToHome()" id="menu-list-item1">
+        Home
+        <ion-icon name="home" item-right></ion-icon>
+      </ion-item>
+      <ion-item color="none" menuClose="" (click)="goToMap()" id="menu-list-item5">
+        Map
+        <ion-icon name="map" item-right></ion-icon>
+      </ion-item>
+      <ion-item color="none" menuClose="" on-click="goToCamera()" id="menu-list-item6">
+        Camera
+        <ion-icon name="camera" item-right></ion-icon>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav #mainContent [root]="rootPage"></ion-nav>
